--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <p class="parallelogram"></p>
             <div id="detail">
                 <p><span>Birth</span>02-01-1998</p>
-                <p><span>Web</span><a href="https://hieuvungtau98.github.io/hieu-cv/" target="_blank">hieuvungtau98.github.io/hieu-cv</a></p>
+                <p><span>Web</span><a href="https://minhhieu9800.github.io/hieu_cv/" target="_blank">minhhieu9800.github.io/hieu-cv</a></p>
                 <p><span>Phone</span>01664431313</p>
-                <p><span>Mail</span>hieunmse62831@fpt.edu.vn</p>
+                <p><span>Mail</span><a href="mailto:minhhieu9800@gmail.com">minhhieu9800@gmail.com</a></p>
                 <ul>
                     <a href="https://www.facebook.com/hieu.0201.vt" target="_blank">
                         <li class="fa fa-facebook-square"></li>
