--- a/index.html
+++ b/index.html
@@ -67,41 +67,54 @@
             <p class="title">SKILLS</p>
             <p class="parallelogram" id="pa2"></p>
 
-            <div class="progress-circle over50 p90 chart">
-                <span>90%</span>
-                <div class="left-half-clipper">
-                    <div class="first50-bar"></div>
-                    <div class="value-bar"></div>
+            <div id="box">
+
+                <div class="small_box">
+                    <div class="progress-circle over50 p90 chart">
+                        <span>90%</span>
+                        <div class="left-half-clipper">
+                            <div class="first50-bar"></div>
+                            <div class="value-bar"></div>
+                        </div>
+                        <p>HTML</p>
+                    </div>
                 </div>
-                <p>HTML</p>
+
+                <div class="small_box">
+                    <div class="progress-circle over50 p80 chart">
+                        <span>80%</span>
+                        <div class="left-half-clipper">
+                            <div class="first50-bar"></div>
+                            <div class="value-bar"></div>
+                        </div>
+                        <p>CSS</p>
+                    </div>
+                </div>
+
+                <div class="small_box">
+                    <div class="progress-circle p30 chart">
+                        <span>30%</span>
+                        <div class="left-half-clipper">
+                            <div class="first50-bar"></div>
+                            <div class="value-bar"></div>
+                        </div>
+                        <p>JAVASCRIPT</p>
+                    </div>
+                </div>
+
+                <div class="small_box">
+                    <div class="progress-circle over50 p60 chart">
+                        <span>60%</span>
+                        <div class="left-half-clipper">
+                            <div class="first50-bar"></div>
+                            <div class="value-bar"></div>
+                        </div>
+                        <p>PHOTOSHOP</p>
+                    </div>
+                </div>
+
             </div>
 
-            <div class="progress-circle over50 p80 chart">
-                <span>80%</span>
-                <div class="left-half-clipper">
-                    <div class="first50-bar"></div>
-                    <div class="value-bar"></div>
-                </div>
-                <p>CSS</p>
-            </div>
-
-            <div class="progress-circle p30 chart">
-                <span>30%</span>
-                <div class="left-half-clipper">
-                    <div class="first50-bar"></div>
-                    <div class="value-bar"></div>
-                </div>
-                <p>JAVASCRIPT</p>
-            </div>
-
-            <div class="progress-circle over50 p60 chart">
-                <span>60%</span>
-                <div class="left-half-clipper">
-                    <div class="first50-bar"></div>
-                    <div class="value-bar"></div>
-                </div>
-                <p>PHOTOSHOP</p>
-            </div>
         </div>
     </div>
     <div id="body2">
