--- a/index.html
+++ b/index.html
@@ -121,10 +121,14 @@
         <div id="experience">
             <p class="s_title">EXPERIENCE</p>
             <div>
-                <li><a href="https://hieuvt98.github.io/" target="_blank">Monte Ré</a></li>
-                <p>It is a small project that I simulated from: <a href="https://www.montere.it/?lang=en" target="_blank" id="webdemo">montere.it</a> - responsive</p>
+                <li>Monte Ré</li>
+                <div class="project">
+                    <a class="img_ex" href="https://hieuvt98.github.io/" target="_blank" id="img_montere"></a>
+                    <p class="text_of_ex">It is a small project that I simulated from: <a href="https://www.montere.it/?lang=en" target="_blank" id="webdemo">montere.it</a> - responsive</p>
+                </div>
             </div>
         </div>
+        <p class="clear_float"></p>
         <div id="education">
             <p class="s_title">EDUCATION</p>
             <div>
