--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <div id="my_story">
                 <i></i>
-                <p>I have had a passion for computer since I was a child. I am always curious about the world of technology. Entering FPT University is a big step, helping me to reach closer to my dream. With my persistence and hard-working, I hope to become a excellent developer in the near future.<br><br>
+                <p>I have had a passion for computer since I was a child. I am always curious about the world of technology. Entering FPT University is a big step, helping me to reach closer to my dream. With my persistence and hard-working, I hope to become an excellent developer in the near future.<br><br>
                     <em>
                     "Công việc của một lập trình viên không phải là ngồi 8 tiếng một ngày để gõ code<br>
                     Công việc của lập trình viên là thay đổi thế giới, làm cho nó trở nên tốt đẹp hơn"
