--- a/index.html
+++ b/index.html
@@ -31,20 +31,35 @@
                 <p><span>Phone</span>01664431313</p>
                 <p><span>Mail</span><a href="mailto:minhhieu9800@gmail.com">minhhieu9800@gmail.com</a></p>
                 <ul>
+
                     <a href="https://www.facebook.com/hieu.0201.vt" target="_blank">
-                        <li class="fa fa-facebook-square"></li>
+                        <li class="fa fa-facebook-square">
+                            <p id="txt_fb">Facebook</p>
+                        </li>
                     </a>
+
                     <a href="http://plus.google.com/u/0/105663155182625826518" target="_blank">
-                        <li class="fa fa-google-plus-square"></li>
+                        <li class="fa fa-google-plus-square">
+                            <p id="txt_gg">Google+</p>
+                        </li>
                     </a>
+
                     <a href="http://github.com/hieuvungtau98" target="_blank">
-                        <li class="fa fa-git-square"></li>
+                        <li class="fa fa-git-square">
+                            <p id="txt_git">Github</p>
+                        </li>
                     </a>
+
                     <a href="https://instagram.com/minh.hiuz" target="_blank">
-                        <li class="fa fa-instagram"></li>
+                        <li class="fa fa-instagram">
+                            <p id="txt_ins">Instagram</p>
+                        </li>
                     </a>
+
                     <a href="https://medium.com/@minhhiu_82732" target="_blank">
-                        <li class="fa fa-medium"></li>
+                        <li class="fa fa-medium">
+                            <p id="txt_med">Medium</p>
+                        </li>
                     </a>
                 </ul>
             </div>
