--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/css-circular-prog-bar.css">
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/test.css" />
+    <script src="script/main.js"></script>
     <link href="image/logo.png" type="image/x-icon" rel="icon">
 </head>
 
 <body>
+
+
     <div id="header">
-        <h1>NGUYEN MINH HIEU</h1>
-        <ul>
+        <h1>PHAM MINH CUONG</h1>
+        <ul id="menu1">
             <li><a href="#about_me">ABOUT</a></li>
             <li><a href="#skills">SKILLS</a></li>
             <li><a href="#experience">EXPERIENCE</a></li>
@@ -21,6 +24,9 @@
             <li id="none_border"><a href="#detail">CONTACT</a></li>
         </ul>
     </div>
+
+
+
     <div id="body1">
         <div id="about_me">
             <p class="title">ABOUT ME</p>
@@ -79,7 +85,7 @@
             </div>
         </div>
         <div id="skills">
-            <p class="title">SKILLS</p>
+            <p id="test_111" class="title">SKILLS</p>
             <p class="parallelogram" id="pa2"></p>
 
             <div id="box">
