--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 
 <body>
-
-
+    
+         
     <div id="header">
-        <h1>PHAM MINH CUONG</h1>
+        <h1>NGUYEN MINH HIEU</h1>
         <ul id="menu1">
             <li><a href="#about_me">ABOUT</a></li>
             <li><a href="#skills">SKILLS</a></li>
@@ -25,7 +25,7 @@
         </ul>
     </div>
 
-
+   
 
     <div id="body1">
         <div id="about_me">
