--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
 
                 <div class="small_box">
                     <div class="progress-circle over50 p60 chart">
-                        <span>60%</span>
+                        <span>70%</span>
                         <div class="left-half-clipper">
                             <div class="first50-bar"></div>
                             <div class="value-bar"></div>
                         </div>
                     </div>
-                    <p>PHOTOSHOP</p>
+                    <p>JAVA</p>
                 </div>
 
             </div>
