--- a/index.html
+++ b/index.html
@@ -148,6 +148,13 @@
                     <p class="text_of_ex">It is a small project that I simulated from: <a href="https://www.montere.it/?lang=en" target="_blank" id="webdemo">montere.it</a> - responsive</p>
                 </div>
             </div>
+            <div>
+                <li>Job</li>
+                <div class="project">
+                   
+                    <p class="text_of_ex">Web Developer for HiSoft in Quang Trung Software City </br> <a href="https://vi-vn.facebook.com/hisoftcompany/" target="_blank" id="webdemo">Facebook</a></p>
+                </div>
+            </div>
         </div>
         <p class="clear_float"></p>
         <div id="education">
@@ -159,6 +166,9 @@
             <div>
                 <li class="from_to"><a target="_blank" href="http://www.bmag.vn/">BMAG Center </a></li>
                 <p>Unlike other universities, BMAG has a totally different style of teaching, which is based on practical knowledge. Students have the opportunity to access professional working environment, participate in real projects.</p>
+            </div>
+            <div>
+                <li class=""><a target="_blank" href="http://greenacademy.edu.vn/">Green Academy </a></li>
             </div>
         </div>
     </div>
