--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
             </div>
             <div>
                 <li class=""><a target="_blank" href="http://greenacademy.edu.vn/">Green Academy </a></li>
+                <p>Green Academy Vietnam is a branch of GIT Korea. If you want to select a program for the open of the job, the crafting job, the main is currently started.</p>
             </div>
         </div>
     </div>
