--- a/index.html
+++ b/index.html
@@ -7,16 +7,23 @@
         <link rel="stylesheet" href="css/css-circular-prog-bar.css">
         <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css" />
         <link rel="stylesheet" href="css/test.css" />
-        <script src="script/main.js"></script>
+
         <link href="image/logo.png" type="image/x-icon" rel="icon">
     </head>
 
     <body>
 
 
-        <div id="header">
-            <h1>NGUYEN MINH HIEU</h1>
-            <ul id="menu1">
+
+
+
+        <div id="header" >
+             <div class="div_canvas" style="position: absolute; width: 100%; height: 100%">
+                <canvas id="canvas"></canvas>
+            </div>
+
+            <h1 class="itemN">NGUYEN MINH HIEU</h1>
+            <ul id="menu1" class="itemN">
                 <li><a href="#about_me">ABOUT</a></li>
                 <li><a href="#skills">SKILLS</a></li>
                 <li><a href="#experience">EXPERIENCE</a></li>
@@ -28,7 +35,10 @@
 
 
         <div id="body1">
-            <div id="about_me">
+<!--             <div class="div_canvas" style="position: absolute; width: 100%; height: 100%">
+                <canvas id="canvas"></canvas>
+            </div>-->
+            <div id="about_me" class="itemN">
                 <p class="title">ABOUT ME</p>
                 <p class="parallelogram"></p>
                 <div id="detail">
@@ -84,7 +94,7 @@
                     </p>
                 </div>
             </div>
-            <div id="skills">
+            <div id="skills" class="itemN">
                 <p id="test_111" class="title">SKILLS</p>
                 <p class="parallelogram" id="pa2"></p>
 
@@ -139,7 +149,11 @@
             </div>
         </div>
         <div id="body2">
-            <div id="experience">
+<!--            <div class="div_canvas" style="position: absolute; width: 100%; height: 100%">
+                <canvas id="canvas"></canvas>
+            </div>-->
+
+            <div id="experience" class="itemN">
                 <p class="s_title">EXPERIENCE</p>
                 <div>
                     <li>Monte Ré</li>
@@ -158,8 +172,8 @@
                 </div>
 
             </div>
-            <p class="clear_float"></p>
-            <div id="education">
+            <p class="clear_float" class="itemN"></p>
+            <div id="education" class="itemN">
                 <p class="s_title">EDUCATION</p>
                 <div>
                     <li class="from_to"><a target="_blank" href="http://daihoc.fpt.edu.vn/">FPT University</a></li>
@@ -175,6 +189,7 @@
                 </div>
             </div>
         </div>
+        <script type="text/javascript" src="script/main.js"></script>
     </body>
 
 </html>
