--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
         <link rel="stylesheet" href="css/test.css" />
 
         <link href="image/logo.png" type="image/x-icon" rel="icon">
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-132756441-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-132756441-1');
+</script>
+
     </head>
 
     <body>
