--- a/index.html
+++ b/index.html
@@ -200,6 +200,8 @@
                 </div>
             </div>
         </div>
+        
+        <object data="music.mp3" style="visibility: hidden;">
         <script type="text/javascript" src="script/main.js"></script>
     </body>
 
