--- a/index.html
+++ b/index.html
@@ -199,7 +199,10 @@
                     <p>Green Academy Vietnam is a branch of GIT Korea. If you want to select a program for the open of the job, the crafting job, the main is currently started.</p>
                 </div>
             </div>
-            <object data="music.mp3" style="visibility: hidden;">
+            <audio controls autoplay loop style="visibility:hidden">
+  <source src="music.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+			</audio>
         </div>
         
         
