--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             <h1 class="itemN">NGUYEN MINH HIEU</h1>
             <ul id="menu1" class="itemN">
-                <li><a href="#about_me">ABOUT</a></li>
+                <li><a href="#about_me">ABOUT ME</a></li>
                 <li><a href="#skills">SKILLS</a></li>
                 <li><a href="#experience">EXPERIENCE</a></li>
                 <li><a href="#education">EDUCATION</a></li>
