--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                     <p><span>Web</span><a href="https://minhhieu9800.github.io/hieu_cv/" target="_blank">minhhieu9800.github.io/hieu-cv</a></p>
                     <p><span>Phone</span>0364431313</p>
                     <p><span>Mail</span><a href="mailto:minhhieu9800@gmail.com">minhhieu9800@gmail.com</a></p>
-		<p><span>My CV</span><a href="hieu_cv.pdf" download="NguyenMinhHieu_CV">Download here</a>
+		<p><span>My CV</span>
+<!-- 			<a href="hieu_cv.pdf" download="NguyenMinhHieu_CV">Download here</a> -->
                     <ul>
 
                         <a href="https://www.facebook.com/hieu.0201.vt" target="_blank">
