--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <p class="title">ABOUT ME</p>
                 <p class="parallelogram"></p>
                 <div id="detail">
-                    <p><span>Birth</span>02-01-1995</p>
+                    <p><span>Birth</span>09-08-1995</p>
                     <p><span>Web</span><a href="https://minhhieu9800.github.io/hieu_cv/" target="_blank">minhhieu9800.github.io/hieu-cv</a></p>
                     <p><span>Phone</span>0364431313</p>
                     <p><span>Mail</span><a href="mailto:minhhieu9800@gmail.com">minhhieu9800@gmail.com</a></p>
@@ -61,7 +61,7 @@
 <!-- 			<a href="hieu_cv.pdf" download="NguyenMinhHieu_CV">Download here</a> -->
                     <ul>
 
-                        <a href="https://www.facebook.com/hieu.0201.vt" target="_blank">
+                        <a href="https://www.facebook.com/eddiez.joker/" target="_blank">
                             <li class="fa fa-facebook-square">
                                 <p id="txt_fb">Facebook</p>
                             </li>
@@ -73,7 +73,7 @@
                             </li>
                         </a>
 
-                        <a href="http://github.com/hieuvungtau98" target="_blank">
+                        <a href="http://github.com/" target="_blank">
                             <li class="fa fa-git-square">
                                 <p id="txt_git">Github</p>
                             </li>
